2-multitenant/modules/regional_load_balancer/main.tf
/**
 * Copyright 2025 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


data "google_project" "eab_cluster_project" {
  project_id = var.project_id
}

resource "google_project_iam_member" "model_armor_service_network_extension_roles" {
  for_each = toset(["roles/compute.networkUser"])
  project  = var.network_project_id
  role     = each.value
  member   = "serviceAccount:${data.google_project.eab_cluster_project.number}@cloudservices.gserviceaccount.com"
}

resource "google_compute_subnetwork" "default" {
  name                       = "backend-subnet"
  project                    = var.network_project_id
  ip_cidr_range              = "10.1.2.0/24"
  network                    = var.vpc_id
  private_ipv6_google_access = "DISABLE_GOOGLE_ACCESS"
  purpose                    = "PRIVATE"
  region                     = var.region
  stack_type                 = "IPV4_ONLY"
}

resource "google_compute_subnetwork" "proxy_only" {
  name          = "proxy-only-subnet"
  project       = var.network_project_id
  ip_cidr_range = "10.129.0.0/23"
  network       = var.vpc_id
  purpose       = "REGIONAL_MANAGED_PROXY"
  region        = var.region
  role          = "ACTIVE"
}

resource "google_compute_firewall" "default" {
  name    = "fw-allow-health-check"
  project = var.network_project_id
  allow {
    protocol = "tcp"
  }
  direction     = "INGRESS"
  network       = var.vpc_id
  priority      = 1000
  source_ranges = ["130.211.0.0/22", "35.191.0.0/16"]
  target_tags   = ["load-balanced-backend"]
  log_config {
    metadata = "INCLUDE_ALL_METADATA"
  }
}

resource "google_compute_firewall" "allow_proxy" {
  name    = "fw-allow-proxies"
  project = var.network_project_id
  allow {
    ports    = ["443"]
    protocol = "tcp"
  }
  allow {
    ports    = ["80"]
    protocol = "tcp"
  }
  allow {
    ports    = ["8080"]
    protocol = "tcp"
  }
  direction     = "INGRESS"
  network       = var.vpc_id
  priority      = 1000
  source_ranges = ["10.129.0.0/23"]
  target_tags   = ["load-balanced-backend"]
  log_config {
    metadata = "INCLUDE_ALL_METADATA"
  }
}

resource "google_compute_instance_template" "default" {
  name    = "l7-xlb-backend-template"
  project = var.project_id
  disk {
    auto_delete  = true
    boot         = true
    device_name  = "persistent-disk-0"
    mode         = "READ_WRITE"
    source_image = "projects/debian-cloud/global/images/family/debian-12"
    type         = "PERSISTENT"
  }
  labels = {
    managed-by-cnrm = "true"
  }
  machine_type = "n1-standard-1"
  metadata = {
    startup-script = <<EOF
    #! /bin/bash
    sudo apt-get update
    sudo apt-get install apache2 -y
    sudo a2ensite default-ssl
    sudo a2enmod ssl
    vm_hostname="$(curl -H "Metadata-Flavor:Google" \
    http://169.254.169.254/computeMetadata/v1/instance/name)"
    sudo echo "Page served from: $vm_hostname" | \
    tee /var/www/html/index.html
    sudo systemctl restart apache2
    EOF
  }
  network_interface {
    access_config {
      network_tier = "PREMIUM"
    }
    network    = var.vpc_id
    subnetwork = google_compute_subnetwork.default.id
  }
  region = var.region
  scheduling {
    automatic_restart   = true
    on_host_maintenance = "MIGRATE"
    provisioning_model  = "STANDARD"
  }
  service_account {
    email  = "default"
    scopes = ["https://www.googleapis.com/auth/devstorage.read_only", "https://www.googleapis.com/auth/logging.write", "https://www.googleapis.com/auth/monitoring.write", "https://www.googleapis.com/auth/pubsub", "https://www.googleapis.com/auth/service.management.readonly", "https://www.googleapis.com/auth/servicecontrol", "https://www.googleapis.com/auth/trace.append"]
  }
  tags = ["load-balanced-backend"]
}

resource "google_compute_instance_group_manager" "default" {
  name    = "l7-xlb-backend-example"
  project = var.project_id
  zone    = "${var.region}-a"
  named_port {
    name = "http"
    port = 80
  }
  version {
    instance_template = google_compute_instance_template.default.id
    name              = "primary"
  }
  base_instance_name = "vm"
  target_size        = 2
}

resource "google_compute_address" "default" {
  name         = "address-name"
  project      = var.network_project_id
  address_type = "EXTERNAL"
  network_tier = "STANDARD"
  region       = var.region
}

resource "google_compute_region_health_check" "default" {
  name               = "l7-xlb-basic-check"
  project            = var.project_id
  check_interval_sec = 5
  healthy_threshold  = 2
  http_health_check {
    port_specification = "USE_SERVING_PORT"
    proxy_header       = "NONE"
    request_path       = "/"
  }
  region              = var.region
  timeout_sec         = 5
  unhealthy_threshold = 2
  log_config {
    enable = true
  }
}

resource "google_compute_region_backend_service" "default" {
  name                  = "l7-xlb-backend-service"
  project               = var.project_id
  region                = var.region
  load_balancing_scheme = "EXTERNAL_MANAGED"
  health_checks         = [google_compute_region_health_check.default.id]
  protocol              = "HTTP"
  session_affinity      = "NONE"
  timeout_sec           = 30
  backend {
    group           = google_compute_instance_group_manager.default.instance_group
    balancing_mode  = "UTILIZATION"
    capacity_scaler = 1.0
  }

  log_config {
    enable = true
  }
}

resource "google_compute_region_url_map" "default" {
  name            = "regional-l7-xlb-map"
  project         = var.project_id
  region          = var.region
  default_service = google_compute_region_backend_service.default.id
  host_rule {
    hosts        = ["*"]
    path_matcher = "api-paths"
  }

  path_matcher {
    name = "api-paths"

    default_service = google_compute_region_backend_service.default.id
    path_rule {
      paths   = ["/v1/chat/completions", "/v1/chat/completions/*"]
      service = google_compute_region_backend_service.default.id
    }
  }
}

resource "google_compute_region_target_http_proxy" "default" {
  name    = "l7-xlb-proxy"
  project = var.project_id
  region  = var.region
  url_map = google_compute_region_url_map.default.id
}

resource "google_compute_forwarding_rule" "default" {
  name       = "l7-xlb-forwarding-rule"
  project    = var.project_id
  provider   = google-beta
  depends_on = [google_compute_subnetwork.proxy_only]
  region     = var.region

  ip_protocol           = "TCP"
  load_balancing_scheme = "EXTERNAL_MANAGED"
  port_range            = "80"
  target                = google_compute_region_target_http_proxy.default.id
  network               = var.vpc_id
  ip_address            = google_compute_address.default.id
  network_tier          = "STANDARD"
}
